2008-08-04  higepon  <higepon@users.sourceforge.jp>

        * Implemented R6RS Records "Procedural Layer".

2008-08-01  higepon  <higepon@users.sourceforge.jp>

        * example/grass.scm: Applied a patch by IRIE Shinsuke.

        * VM.cpp (VM): Applied a patch for READ_CHAR by IRIE Shinsuke.

        * Record.h: Added.

        * RecordTypeDescriptor.h: Added.

        * Callable.h : Added.

2008-07-25  higepon  <higepon@users.sourceforge.jp>

        * Implemented all of hashtable procedures!

        * string-ci-hash, symbol-hash, equal-hash.

        * hashtable-clear!, hashtable-entries, hashtable-hash-function, hashtable-equivalence-function.

        * library.scm : hashtable-update!, hashtable-copy and hashtable-mutable?.

        * free-vars.scm : Added hashtable-delete!, hashtable-contains?.

2008-07-24  higepon  <higepon@users.sourceforge.jp>

        * free-vars.scm : Added (hashtable? ...) and (hashtable-size ...).

        * HashTableProceduures.cpp : Added (hash-string).

        * HashTableProceduures.h: Added.

        * HashTableProceduures.cpp: Added.

2008-07-22  higepon  <higepon@users.sourceforge.jp>

        * EqHashTable.h : Added (eq-hash ...).

        * GenericMap.h: Added.

        * GenericHashTable.h (scheme): Added.

        * HashTable.h (scheme): Added for Generic HashTable

2008-07-18  higepon  <higepon@users.sourceforge.jp>

        *  0.0.5 released.

2008-07-16  higepon  <higepon@users.sourceforge.jp>

        * library.scm: Removed CGI library from library.scm, it moved to r6rs-examples/ directory.

        * tools/psyntax-r6rs/psyntax-buildscript-mosh.ss : Added library rules.

        * r6rs-examples/cgi.ss: Rewrote cgi library with R6RS form.

        * r6rs-examples/lambda/wiki.ss: Rewrote lambda wiki with R6RS form.

2008-07-15  higepon  <higepon@users.sourceforge.jp>

        * freeproc.cpp: Added extern char** environ.

2008-07-13  higepon  <higepon@users.sourceforge.jp>
