@@ -1,3 +1,7 @@
+2008-08-05  higepon  <higepon@users.sourceforge.jp>
+
+        * Implemented R6RS Records "Inspection".
+
 2008-08-04  higepon  <higepon@users.sourceforge.jp>
 
         * Implemented R6RS Records "Procedural Layer".
